style.css
/* spotify colors:
- green is rgb(29, 185, 91)
- light grey is rgb(178, 178, 178) 
- medium grey is rgb(44,44,44) */

/*======for toggle switch button =====*/
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.switch input { 
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: rgba(147, 236, 181, 0.877);
}

input:focus + .slider {
  /* box-shadow: 0 0 1px #2196F3; */
  box-shadow: 0 0 1px rgba(147, 236, 181, 0.877);
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
}
/*========================*/
.hiitify_title {
    color: white;
}

#wi_length {
    text-align:center;
}
#wi_bpm{
    text-align:center;
}
#ri_length{
    text-align:center;
}
#ri_bpm{
    text-align:center;
}
#tw_length{
    text-align:center;
}

#interval_time_remaining{
    font-size: 200px; 
    height: 200px;
    line-height: 200px;
}
#total_time_remaining{
    padding: 10px;
    font-size: 25px; 
    height: 25px;
    line-height: 25px;
}
#workoutDiv{
    min-width: 330px;
    box-shadow: 0 4px 8px 0 rgba(216, 213, 213, 0.192), 0 6px 20px 0 rgba(216, 213, 213, 0.445);
    width: auto; /* added after div started stretching 100% width suddently */
    white-space: nowrap;
    /* used to help stretch speed slider to full width */
    display: flex;
    flex-direction: column;
    align-items: stretch; 
}

/* used to make label for beep switch vertically centered */
#beep_switch_label{
    display:inline;
    line-height: 34px;
}
#beep_wrapper{
    text-align: center;
    height: 34px;
    line-height: 34px;
}

/* =============button css =====================*/
/* normal buttons (smaller than start / play / etc. buttons */
.btn-gray {
    border: 2px solid black;
    border-color: rgb(178, 178, 178);
    background-color: rgb(44,44,44);
    color: rgb(178, 178, 178);
    padding: 5px 24px;
    border-radius: 25px;
}
.btn-gray:hover {
background: rgb(35,35,35);
border-color: white;
transform: scale(1.05) perspective(1px)
}

/* for the cancel button css */
.cancel-button {
border: 2px solid black;
border-color: #e7e7e7;
background-color: white;
color: black;
padding: 14px 28px;
border-radius: 25px;
}
.cancel-button:hover {
background: #e7e7e7;
transform: scale(1.05) perspective(1px)
}
/*Green - for start button */
.btn-green {
    border: 2px solid black; 
    border-color: rgb(29, 185, 91);
    background-color:rgb(29, 185, 91);
    color: white;
    padding: 14px 28px;
    border-radius: 25px;

}
.btn-green:hover{
    /* background-color: rgba(29, 185, 91, 0.616); */
    /* border-color: rgba(29, 185, 91, 0.616); */
    transform: scale(1.05) perspective(1px);

}
/*play-pause button */
.btn-play {
    border: 2px solid black; 
    background-color:rgb(29, 185, 91);
    color: white;
    border-radius: 50%;
    height:56px; /* to set height and width or else it becomes oval */
    width:56px;
    border-color: rgb(29, 185, 91);
}
.btn-play:hover{
    /* background-color: rgb(29, 185, 91); */
    transform: scale(1.10) perspective(1px);
    /* border-color: rgb(29, 185, 91); */
}
/*stop button */
.btn-stop {
    border: 3px solid black; 
    background-color:rgb(40,40,40);
    color: white;
    border-radius: 50%;
    height:56px;
    width:56px;
    border-color:rgb(29, 185, 91);
    position:absolute;
    z-index: 0;
}
.btn-stop:hover{
    transform: scale(1.10) perspective(1px);
    border-color:#f94e4e;
}
/* uses to make buttons not go together in center of div without margin */
.spacing-horizontal{
    margin-left: 10px;
    margin-right: 10px;
}
.wrapper-div-spacing{
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 20px;
    margin-right: 20px;
}
.extra-spacing{ /* separates further the play-pause and stop button div from the timer div above and the speed div below */
    margin-top: 30px;
    margin-bottom: 30px;
}

/* used for the button that has hiitify toggle / auth functionality */
.auth-button {
    border: 2px solid;
    padding: 14px 28px;
    border-radius: 25px;
    background-color: rgb(29, 185, 91);
    color: white;
    border-color: rgb(29, 185, 91);
  }
.auth-button:hover {
transform: scale(1.05) perspective(1px);
background-color: white;
border-color: white;
color: rgb(29, 185, 91);
}
/* =========================================*/
/*changing speed-extension-input to green, roundabout but it works*/
#speed-extension-input {
    filter: grayscale(100%) sepia(100%) hue-rotate(90deg) brightness(1.7); 
}
#speed-extension-input:hover { 
filter: grayscale(100%) sepia(100%) hue-rotate(90deg) brightness(2.0); 
}

#speed-extension-input:active{
    filter: grayscale(100%) sepia(100%) hue-rotate(90deg) brightness(1.2); 
}
/* =========================================*/
.tooltip_parent:hover .tooltip_span {
    display: block;
}
.tooltip_parent .tooltip_span {
    display: none;
}
.tooltip_parent .tooltip_span::after { /*makes the triangle in the tooltip */
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: rgb(46, 45, 45) transparent transparent transparent;
  }

.tooltip_span {
    display: none;
    background: rgb(46, 45, 45);
    font-size: 12px;
    position: absolute;
    pointer-events: none;
    white-space: nowrap;

    color: rgb(178, 178, 178);
    text-align: center;
    border-radius: 6px;
    padding: 1px 5px;
    z-index: 100;
    bottom: 120%;
    left: 50%;
    margin-left: -32px;
    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);

    /* for delay showing it: */
    animation: fadeIn linear 0.1s;
    animation-fill-mode: both; /* helps it not appear at beginning */
    animation-delay: 1s; 
}
@keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
}

